--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 
     <div class="container">
         <div class="destination-container">
-            <div class="destination" id="belize">
-                <h2>Belize</h2>
+            <div class="destination" id="EGYPT">
+                <h2>EGYPT</h2>
             </div>
 
-            <div class="destination" id="barcelona">
-                <h2>Sao Paolo</h2>
+            <div class="destination" id="CAIRO">
+                <h2>CAIRO</h2>
             </div>
         </div>
     </div>
